Enhance MayorManager.java with a hard-coded list of SkyBlock mayors (Jerry, Aatrox, Diana, Finnegan, Cole, Foxy, Marina, Paul, Scorpius) eac
By Jarvis agent Oracle.