@@ -2,6 +2,7 @@ package com.skyblock.core.mayor;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -9,11 +10,27 @@ import java.util.Map;
 public class MayorManager {
 
     private static final List<String> DEFAULT_CANDIDATES = Arrays.asList(
-            "Finnegan", "Derpy", "Diana", "Jerry", "Foxy", "Paul", "Scorpius"
+            "Jerry", "Aatrox", "Diana", "Finnegan", "Cole", "Foxy", "Marina", "Paul", "Scorpius"
     );
 
+    private static final Map<String, List<String>> DEFAULT_PERKS;
+
+    static {
+        Map<String, List<String>> perks = new HashMap<>();
+        perks.put("Jerry", Collections.unmodifiableList(Arrays.asList("Jerrypocalypse", "Jerry's Gifts", "Gift Hunt")));
+        perks.put("Aatrox", Collections.unmodifiableList(Arrays.asList("Slayer XP Buff", "Slayer Quest Limit", "Slayer's Will", "Blood Thirst")));
+        perks.put("Diana", Collections.unmodifiableList(Arrays.asList("Great Spook", "Mythological Ritual", "Lucky!")));
+        perks.put("Finnegan", Collections.unmodifiableList(Arrays.asList("Cultivation", "Shining Armor", "Stead Fast", "Blooming Business")));
+        perks.put("Cole", Collections.unmodifiableList(Arrays.asList("Prospection", "Mining Fiesta", "Molten Forge")));
+        perks.put("Foxy", Collections.unmodifiableList(Arrays.asList("What the Dog Doin?", "Extra Pets", "Good Doggy")));
+        perks.put("Marina", Collections.unmodifiableList(Arrays.asList("Fishing Festival", "Luck of the Sea", "Quiver", "Water Breathing")));
+        perks.put("Paul", Collections.unmodifiableList(Arrays.asList("Marauder", "Goblin Raid", "Supply Drop", "Show Off")));
+        perks.put("Scorpius", Collections.unmodifiableList(Arrays.asList("Bribe", "Scorched", "Plague")));
+        DEFAULT_PERKS = Collections.unmodifiableMap(perks);
+    }
+
     private String currentMayor = null;
-    private final Map<String, List<String>> mayorPerks = new HashMap<>();
+    private final Map<String, List<String>> mayorPerks = new HashMap<>(DEFAULT_PERKS);
     private final List<String> candidates = new ArrayList<>(DEFAULT_CANDIDATES);
 
     public String getCurrentMayor() {
@@ -25,7 +42,7 @@ public class MayorManager {
     }
 
     public List<String> getPerks(String mayor) {
-        return mayorPerks.getOrDefault(mayor, List.of());
+        return mayorPerks.getOrDefault(mayor, Collections.emptyList());
     }
 
     public void setPerks(String mayor, List<String> perks) {
